# mtv

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
Proof of Concept/: playlist.m3u  stream-server.py
config/: config.yaml
src/mtv/: __init__.py  __main__.py  config.py  library.py  main.py  scanner.py  scheduler.py
src/mtv/api/: __init__.py  epg.py  playlist.py
src/mtv/models/: __init__.py  movie.py
src/mtv/server/: __init__.py  handlers.py  http_server.py  streamer.py
src/mtv/utils/: __init__.py  ffmpeg.py  ffprobe.py  logging.py
